testdata/typechecker/error/portfolio_DupeParamFuncIncompat.java
// Tests that duplicate and incompatible function parameters error.

int main() {
    return 0;
}

int f(int x, boolean x) {
    return 0;
}
